// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`batch 1`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "addObject",
        "body": Object {
          "function": [Function],
          "nested": Object {
            "is": Object {
              "all": "fine",
            },
          },
          "some": "data",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 2`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "updateObject",
        "body": Object {
          "and": "this is everything now",
          "objectID": "some-cool-object",
          "some": "other data",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 3`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "partialUpdateObject",
        "body": Object {
          "objectID": "some-cool-object",
          "some": "data",
          "the": "rest is still here",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 4`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "partialUpdateObjectNoCreate",
        "body": Object {
          "if": "it doesn't exist yet",
          "objectID": "some-cool-object",
          "this": "object",
          "won't": "be made",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 5`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "deleteObject",
        "body": Object {
          "objectID": "some-uncool-object",
        },
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 6`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "delete",
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`batch 7`] = `
Object {
  "body": Object {
    "requests": Array [
      Object {
        "action": "clear",
      },
    ],
  },
  "method": "POST",
  "path": "/1/indexes//batch",
}
`;

exports[`contains the correct methods 1`] = `
Array [
  "batch",
  "clear",
  "copy",
  "remove",
  "browse",
  "browseFrom",
  "move",
  "search",
  "similarSearch",
  "waitTask",
]
`;

exports[`search 1`] = `
Object {
  "body": Object {
    "params": Array [
      Object {
        "params": Object {},
      },
    ],
  },
  "forceReadHosts": true,
  "method": "POST",
  "path": "/1/indexes//query",
}
`;
